--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline{
         string(defaultValue: 'master', description: 'numer tagu np. refs/tags/1.0.0 bądź branch np. master', name: 'role_tag')
         choice(name: 'playbook', choices: ['reaport.yml', 'proxy_all.yml', 'proxy_nginx.yml', 'proxy_socat.yml'], description: 'Wybierz playbook')
         choice(name: 'limit', choice: ['proxy-mentax.tuw.pl', 'proxy-altkom.tuw.pl', 'proxy-apreel.tuw.pl', 'proxy-britenet.tuw.pl', 'proxy-decerto.tuw.pl', 'proxy-ecom.tuw.pl', 'proxy-estimates.tuw.pl'], description: 'Wybierz serwer' )
-        string(defaultValue: '--check', description: 'extra parameters np. --check, --list-hosts', name: 'extra'
+        string(defaultValue: '--check', description: 'extra parameters np. --check, --list-hosts', name: 'extra')
     }
 
     environment {
