--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,15 +2,15 @@ pipeline{
     agent any
 
     parameters {
-        string(defaultValue: 'master', description: 'numer tagu np. refs/tags/1.0.3 bądź branch np. master', name: 'inventory_tag')
-        string(defaultValue: 'master', description: 'numer tagu np. refs/tags/1.0.0 bądź branch np. master', name: 'role_tag')
+        string(defaultValue: 'master', description: 'numer tagu, bądź branch np. development', name: 'inventory_tag')
+        string(defaultValue: 'master', description: 'numer tagu, bądź branch np. development', name: 'role_tag')
         choice(name: 'playbook', choices: ['reaport.yml', 'proxy_all.yml', 'proxy_nginx.yml', 'proxy_socat.yml'], description: 'Wybierz playbook')
-        choice(name: 'limit', choices: ['proxy-mentax.tuw.pl', 'proxy-altkom.tuw.pl', 'proxy-apreel.tuw.pl', 'proxy-britenet.tuw.pl', 'proxy-decerto.tuw.pl', 'proxy-ecom.tuw.pl', 'proxy-estimates.tuw.pl'], description: 'Wybierz serwer' )
+        choice(name: 'limit', choices: ['cent_3', 'cent_2'], description: 'Wybierz serwer' )
         string(defaultValue: '--check', description: 'extra parameters np. --check, --list-hosts', name: 'extra')
     }
 
     environment {
-        inventory = 'l1'
+        inventory = 'la-learning'
         role = 'reverseproxy'
     }
 
@@ -27,19 +27,33 @@ pipeline{
                     
                     def workspace = pwd()
                     sh "mkdir inventory"
+                    dir ("${workspace}/inventory") {
+                        checkout([$class: 'GitSCM', branches: [[name: '${inventory_tag}']], doGenerateSubmoduleConfigurations: false, extensions: [[$class: 'SubmoduleOption', disableSubmodules: false, parentCredentials: true, recursiveSubmodules: true, reference: '', trackingSubmodules: false]], submoduleCfg: [], userRemoteConfigs: [[credentialsId: '0001', url: 'git@github.com:PlucinskiP/${inventory}.git']]])
+
+                    }
+                    sh "mkdir playbook"
+                    dir ("${workspace}/playbook") {
+                        checkout([$class: 'GitSCM', branches: [[name: '${role_tag}']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[credentialsId: '0001', url: 'git@github.com:PlucinskiP/${role}.git']]])
+
+                        }
+                             
+                    }
+
                 }
             }
         }
         
         stage('Execute Ansible') {
             steps {
-                sh "echo ansiblePlaybook become: true, colorized: true, credentialsId: 'jenkins-dev', disableHostKeyChecking: true, extras: '${extra}', installation: 'ansible-2.9.14', inventory: 'inventory/inventory', limit: '${limit}', playbook: 'playbook/${playbook}',  vaultCredentialsId: 'ansible-vault-${inventory}'"
+                sh "ansiblePlaybook become: true, colorized: true, credentialsId: 'ansible_key', disableHostKeyChecking: true, extras: '${extra}', installation: 'ansible-2.9.14', inventory: 'inventory/inventory', limit: '${limit}', playbook: 'playbook/${playbook}'"
             }
         }
 
         stage('Copy reaport') {
             steps {
                 sh 'printenv'
+                def workspace = pwd()
+                archiveArtifacts artifacts: '${workspace}/${inventory}/tmp/reaport.csv', fingerprint: true
             }
         }
     }
