--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline{
                     cleanWs()
                     
                     def workspace = pwd()
-                    def repo_url = 'https://github.com/PlucinskiP/'+${inventory}+'.git'
+                    def repo_url = https://github.com/PlucinskiP/${inventory}.git
                     sh "mkdir inventory"
                     dir ("${workspace}/inventory") {
                         checkout([$class: 'GitSCM', branches: [[name: '${inventory_tag}']], doGenerateSubmoduleConfigurations: false, extensions: [[$class: 'SubmoduleOption', disableSubmodules: false, parentCredentials: true, recursiveSubmodules: true, reference: '', trackingSubmodules: false]], submoduleCfg: [], userRemoteConfigs: [[url: "${repo_url}" ]]])
