--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,17 +2,19 @@ pipeline{
     agent any
 
     parameters {
+        string(name: 'inventory', defaultValue: 'la-learning', description: 'Inventory')
         string(defaultValue: 'jenkins', description: 'numer tagu, bądź branch np. development', name: 'inventory_tag')
+        choice(name: 'role', choices: ['reverseproxy'], description: 'playbook' )
         string(defaultValue: 'master', description: 'numer tagu, bądź branch np. development', name: 'role_tag')
         choice(name: 'playbook', choices: ['reaport.yml', 'proxy_all.yml', 'proxy_nginx.yml', 'proxy_socat.yml'], description: 'Wybierz playbook')
         choice(name: 'limit', choices: ['cent_3', 'cent_2'], description: 'Wybierz serwer' )
         string(defaultValue: '--check', description: 'extra parameters np. --check, --list-hosts', name: 'extra')
     }
 
-    environment {
-        inventory = 'la-learning'
-        role = 'reverseproxy'
-    }
+    // environment {
+    //     inventory = 'la-learning'
+    //     role = 'reverseproxy'
+    // }
 
     options {
         timeout(time: 10, unit: 'MINUTES')
@@ -26,10 +28,9 @@ pipeline{
                     cleanWs()
                     
                     def workspace = pwd()
-                    def repo_url = https://github.com/PlucinskiP/${inventory}.git
                     sh "mkdir inventory"
                     dir ("${workspace}/inventory") {
-                        checkout([$class: 'GitSCM', branches: [[name: '${inventory_tag}']], doGenerateSubmoduleConfigurations: false, extensions: [[$class: 'SubmoduleOption', disableSubmodules: false, parentCredentials: true, recursiveSubmodules: true, reference: '', trackingSubmodules: false]], submoduleCfg: [], userRemoteConfigs: [[url: "${repo_url}" ]]])
+                        checkout([$class: 'GitSCM', branches: [[name: '${inventory_tag}']], doGenerateSubmoduleConfigurations: false, extensions: [[$class: 'SubmoduleOption', disableSubmodules: false, parentCredentials: true, recursiveSubmodules: true, reference: '', trackingSubmodules: false]], submoduleCfg: [], userRemoteConfigs: [[url: 'https://github.com/PlucinskiP/${inventory}.git' ]]])
 
                     }
                     sh "mkdir playbook"
