--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,11 +11,6 @@ pipeline{
         string(defaultValue: '--check', description: 'extra parameters np. --check, --list-hosts', name: 'extra')
     }
 
-    // environment {
-    //     inventory = 'la-learning'
-    //     role = 'reverseproxy'
-    // }
-
     options {
         timeout(time: 10, unit: 'MINUTES')
         disableConcurrentBuilds()
@@ -53,10 +48,15 @@ pipeline{
                 sh 'printenv'
             }
         }
+        stage('Copy reaport') {
+            steps {
+            archiveArtifacts artifacts: '/${inventory}/${limit}/tmp/reaport.csv', followSymlinks: false
+            }
+        }
     }
     post {
         always {
-            archiveArtifacts artifacts: '${workspace}/${inventory}/tmp/reaport.csv', fingerprint: true
+            archiveArtifacts artifacts: '/${inventory}/${limit}/tmp/reaport.csv', fingerprint: true
         }
     }
 }
