jenkinsfile fix archive artifact

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -43,20 +43,20 @@ pipeline{
             }
         }
 
-        stage('Copy reaport') {
+        stage('print envs') {
             steps {
                 sh 'printenv'
             }
         }
         stage('archive reaport') {
             steps {
-            archiveArtifacts artifacts: '/playbook/cent_3/tmp/reaport.csv', followSymlinks: false
+            archiveArtifacts artifacts: 'playbook/${limit}/tmp/reaport.csv', followSymlinks: false
             }
         }
     }
     post {
         always {
-            archiveArtifacts artifacts: '/playbook/${limit}/tmp/reaport.csv', fingerprint: true
+            archiveArtifacts artifacts: 'playbook/*/tmp/reaport.csv', fingerprint: true
         }
     }
 }
