--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -50,13 +50,7 @@ pipeline{
         }
         stage('archive reaport') {
             steps {
-            archiveArtifacts artifacts: 'playbook/${limit}/tmp/reaport.csv', followSymlinks: false
+            archiveArtifacts artifacts: 'playbook/*/tmp/reaport.csv', followSymlinks: false
             }
         }
-    }
-    post {
-        always {
-            archiveArtifacts artifacts: 'playbook/*/tmp/reaport.csv', fingerprint: true
-        }
-    }
 }
