set container parameters

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -39,7 +39,10 @@ pipeline{
         
         stage('Execute Ansible') {
             agent {
-                docker { image 'ansible/ansible-runner:1.4.6' }
+                docker {
+                    image 'ansible/ansible-runner:1.4.6' 
+                    args '-u 0:0'
+                    }
             }
             steps {
                 ansiblePlaybook become: true, colorized: true, credentialsId: 'ansible_key', disableHostKeyChecking: true, extras: '${extra}', installation: 'ansible-2.9.14', inventory: 'inventory/inventory', limit: '${limit}', playbook: 'playbook/${playbook}'
