--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -45,6 +45,10 @@ pipeline{
                     }
             }
             steps {
+                sh 'pwd'
+                sh 'ls -al'
+            }
+            steps {
                 ansiblePlaybook become: true, colorized: true, credentialsId: 'ansible_key', disableHostKeyChecking: true, extras: '${extra}', installation: 'ansible-2.9.14', inventory: 'inventory/inventory', limit: '${limit}', playbook: 'playbook/${playbook}'
             }
         }
