--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -39,6 +39,7 @@ pipeline{
                 docker {
                     image 'ansible/ansible-runner:1.4.6' 
                     args '-u 0:0'
+                    reuseNode true
                 }
             }
             steps {
