--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -61,7 +61,7 @@ pipeline{
         stage('archive reaport') {
             steps {
             archiveArtifacts artifacts: 'playbook/*/tmp/reaport.csv', followSymlinks: false
-            }
+            sh "chmod -R 777 playbook"      }
         }
     }
 }
